--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
 						<suiteXmlFiles>
 							<suiteXmlFile>testng.xml</suiteXmlFile>
-							<!-- <suiteXmlFile>testng_crossBrowser_parallel.xml</suiteXmlFile> -->
+						 <suiteXmlFile>testng_crossBrowser_parallel.xml</suiteXmlFile>
 
 						</suiteXmlFiles>
 
